<resources>
    <string name="app_name">ALG_Adminmatic</string>
    <string name="Welcome">Welcome, User!</string>
    <string name="employeeList">Employees List</string>
    <string name="group_text_message">Group Text Message</string>
    <string name="numActiveEmployees"># Active Employees</string>
    <string name="numActiveCustomers"># Active Customers</string>
    <string name="numActiveVendors"># Active Vendors</string>
    <string name="numActiveItems"># Active Items</string>
    <string name="employee">Employee</string>
    <string name="employees">Employees</string>
    <string name="customer">Customer</string>
    <string name="customers">Customers</string>
    <string name="vendor">Vendor</string>
    <string name="item">Item</string>
    <string name="leads">Leads</string>
    <string name="schedule">Schedule</string>
    <string name="performance">Performance</string>
    <string name="history">History</string>
    <string name="images">Images</string>
    <string name="employee_name">John McLawn</string>
    <string name="employee_ph_number">(401)863.2121</string>
    <string name="employee_email">john@atlantic...den.com</string>
    <string name="departments">Departments</string>
    <string name="crews">Crews</string>
    <string name="shifts">Shifts</string>
    <string name="payroll">Payroll</string>
    <string name="login">Log In</string>
    <string name="customers_search">Search Customers</string>
    <string name="schedules_search">Search Schedules</string>
    <string name="items_search">Search Items</string>
    <string name="vendors_search">Search Vendors</string>
    <string name="title_activity_customers_list_tab">customers_list_tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vendor__main">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="work_order_list"># Work Order(s) List</string>
    <string name="item_name">Pine Bark Mulch</string>
    <string name="item_cost">$45.00/Yard</string>
    <string name="title_activity_item_disp">ItemDisp</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="locate">Locate</string>
    <string name="work_order">Work Order</string>
    <string name="view_employee_schedule">View ______s Schedule</string>
    <string name="schedule_settings">Schedule Settings</string>
    <string name="yourUsageFrom">Your usage from:</string>
    <string name="qty">Qty</string>
    <string name="date">Date</string>
    <string name="to">to:</string>
    <string name="txt_date">3/13</string>
    <string name="number_qty">0.45</string>
    <string name="searchImageTags">Search Image Tags</string>
    <string name="imagetitle">Image Title</string>
    <string name="add_images">Add Images</string>
    <string name="title_gizmos">gizmos</string>
    <string name="search_forEquipment">Search for Equipment</string>
    <string name="crew">Crew</string>
    <string name="type">Type</string>
    <string name="status">Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_order_s_found">### Work Order(s) Found</string>
    <string name="view_s_schedule">View _____\'s Schedule</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="edit_fields">Edit Fields</string>
    <string name="equipment">Equipment</string>
    <string name="items">Items</string>
    <string name="vendors">Vendors</string>
    <string name="contracts">Contracts</string>
    <string name="txt_equipment_dummy">No Description Provided</string>
    <string name="view_service_lists">View Service Lists</string>
    <string name="txt_user_shifts_for"></string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="set_week">Set Week</string>
    <string name="noData">------</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="reset_shift">Reset Shift</string>
    <string name="today_s_total_hours">Today\'s total hours:</string>
    <string name="set_shift">Set shift</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps_all">Map</string>

</resources>
